--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007BFF",
+  "permissions": ["geolocation"],
   "icons": [
     {
       "src": "icon.png",
