--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
-  "name": "Aplikasi Saya",
-  "short_name": "Saya",
+  "name": "SPN Absensi",
+  "short_name": "Absensi",
   "start_url": "/",
-  "display": "standalone",
+  "display": "fullscreen",
   "background_color": "#ffffff",
   "theme_color": "#007BFF",
   "permissions": ["geolocation"],
   "icons": [
     {
-      "src": "icon.png",
+      "src": "url.png",
       "sizes": "192x192",
       "type": "image/png"
     }
